install(FILES gka-data-e.svg DESTINATION share/icons/hicolor/scalable/apps)
install(FILES usr-local-lib-cmake/Eet/EetConfig.cmake DESTINATION lib/cmake/Eet)
install(FILES usr-local-lib-cmake/Eet/EetConfigVersion.cmake DESTINATION lib/cmake/Eet)
install(FILES usr-local-lib-cmake/Efl/EflConfig.cmake DESTINATION lib/cmake/Efl)
install(FILES usr-local-lib-cmake/Efl/EflConfigVersion.cmake DESTINATION lib/cmake/Efl)
install(FILES usr-local-lib-cmake/EoCxx/EoCxxConfigVersion.cmake DESTINATION lib/cmake/EoCxx)
install(FILES usr-local-lib-cmake/EoCxx/EoCxxConfig.cmake DESTINATION lib/cmake/EoCxx)
install(FILES usr-local-lib-cmake/Eldbus/EldbusConfigVersion.cmake DESTINATION lib/cmake/Eldbus)
install(FILES usr-local-lib-cmake/Eldbus/EldbusConfig.cmake DESTINATION lib/cmake/Eldbus)
install(FILES usr-local-lib-cmake/flatbuffers/FlatbuffersTargets-noconfig.cmake DESTINATION lib/cmake/flatbuffers)
install(FILES usr-local-lib-cmake/flatbuffers/FlatbuffersSharedTargets-noconfig.cmake DESTINATION lib/cmake/flatbuffers)
install(FILES usr-local-lib-cmake/flatbuffers/FlatcTargets.cmake DESTINATION lib/cmake/flatbuffers)
install(FILES usr-local-lib-cmake/flatbuffers/FlatcTargets-release.cmake DESTINATION lib/cmake/flatbuffers)
install(FILES usr-local-lib-cmake/flatbuffers/FlatbuffersSharedTargets.cmake DESTINATION lib/cmake/flatbuffers)
install(FILES usr-local-lib-cmake/flatbuffers/FlatbuffersSharedTargets-release.cmake DESTINATION lib/cmake/flatbuffers)
install(FILES usr-local-lib-cmake/flatbuffers/FlatbuffersTargets-release.cmake DESTINATION lib/cmake/flatbuffers)
install(FILES usr-local-lib-cmake/flatbuffers/FlatbuffersTargets.cmake DESTINATION lib/cmake/flatbuffers)
install(FILES usr-local-lib-cmake/flatbuffers/FlatbuffersConfig.cmake DESTINATION lib/cmake/flatbuffers)
install(FILES usr-local-lib-cmake/Efreet/EfreetConfig.cmake DESTINATION lib/cmake/Efreet)
install(FILES usr-local-lib-cmake/Efreet/EfreetConfigVersion.cmake DESTINATION lib/cmake/Efreet)
install(FILES usr-local-lib-cmake/Eeze/EezeConfigVersion.cmake DESTINATION lib/cmake/Eeze)
install(FILES usr-local-lib-cmake/Eeze/EezeConfig.cmake DESTINATION lib/cmake/Eeze)
install(FILES usr-local-lib-cmake/EinaCxx/EinaCxxConfig.cmake DESTINATION lib/cmake/EinaCxx)
install(FILES usr-local-lib-cmake/EinaCxx/EinaCxxConfigVersion.cmake DESTINATION lib/cmake/EinaCxx)
install(FILES usr-local-lib-cmake/Elementary/ElementaryConfigVersion.cmake DESTINATION lib/cmake/Elementary)
install(FILES usr-local-lib-cmake/Elementary/ElementaryConfig.cmake DESTINATION lib/cmake/Elementary)
install(FILES usr-local-lib-cmake/Ethumb/EthumbConfig.cmake DESTINATION lib/cmake/Ethumb)
install(FILES usr-local-lib-cmake/Ethumb/EthumbConfigVersion.cmake DESTINATION lib/cmake/Ethumb)
install(FILES usr-local-lib-cmake/EthumbClient/EthumbClientConfig.cmake DESTINATION lib/cmake/EthumbClient)
install(FILES usr-local-lib-cmake/EthumbClient/EthumbClientConfigVersion.cmake DESTINATION lib/cmake/EthumbClient)
install(FILES usr-local-lib-cmake/Elua/EluaConfig.cmake DESTINATION lib/cmake/Elua)
install(FILES usr-local-lib-cmake/Elua/EluaConfigVersion.cmake DESTINATION lib/cmake/Elua)
install(FILES usr-local-lib-cmake/Ecore/EcoreConfigVersion.cmake DESTINATION lib/cmake/Ecore)
install(FILES usr-local-lib-cmake/Ecore/EcoreConfig.cmake DESTINATION lib/cmake/Ecore)
install(FILES usr-local-lib-cmake/EvasCxx/EvasCxxConfig.cmake DESTINATION lib/cmake/EvasCxx)
install(FILES usr-local-lib-cmake/EvasCxx/EvasCxxConfigVersion.cmake DESTINATION lib/cmake/EvasCxx)
install(FILES usr-local-lib-cmake/Eina/EinaConfig.cmake DESTINATION lib/cmake/Eina)
install(FILES usr-local-lib-cmake/Eina/EinaConfigVersion.cmake DESTINATION lib/cmake/Eina)
install(FILES usr-local-lib-cmake/EcoreCxx/EcoreCxxConfig.cmake DESTINATION lib/cmake/EcoreCxx)
install(FILES usr-local-lib-cmake/EcoreCxx/EcoreCxxConfigVersion.cmake DESTINATION lib/cmake/EcoreCxx)
install(FILES usr-local-lib-cmake/Evas/EvasConfig.cmake DESTINATION lib/cmake/Evas)
install(FILES usr-local-lib-cmake/Evas/EvasConfigVersion.cmake DESTINATION lib/cmake/Evas)
install(FILES usr-local-lib-cmake/Eo/EoConfig.cmake DESTINATION lib/cmake/Eo)
install(FILES usr-local-lib-cmake/Eo/EoConfigVersion.cmake DESTINATION lib/cmake/Eo)
install(FILES usr-local-lib-cmake/Emotion/EmotionConfigVersion.cmake DESTINATION lib/cmake/Emotion)
install(FILES usr-local-lib-cmake/Emotion/EmotionConfig.cmake DESTINATION lib/cmake/Emotion)
install(FILES usr-local-lib-cmake/Edje/EdjeConfigVersion.cmake DESTINATION lib/cmake/Edje)
install(FILES usr-local-lib-cmake/Edje/EdjeConfig.cmake DESTINATION lib/cmake/Edje)
install(FILES usr-local-lib-cmake/EetCxx/EetCxxConfig.cmake DESTINATION lib/cmake/EetCxx)
install(FILES usr-local-lib-cmake/EetCxx/EetCxxConfigVersion.cmake DESTINATION lib/cmake/EetCxx)
install(FILES usr-local-lib-cmake/Emile/EmileConfigVersion.cmake DESTINATION lib/cmake/Emile)
install(FILES usr-local-lib-cmake/Emile/EmileConfig.cmake DESTINATION lib/cmake/Emile)
install(FILES usr-local-lib-cmake/Eio/EioConfigVersion.cmake DESTINATION lib/cmake/Eio)
install(FILES usr-local-lib-cmake/Eio/EioConfig.cmake DESTINATION lib/cmake/Eio)
